app/src/App.css
/* ... */
.actionMessagePadding {
  padding-left: 10px !important;
}

.paddingLeft5{
  padding-left: 5px;
}

.paddingRight5{
  padding-right: 5px;
}

.infoPanel {
  height: 385px;
  padding-top: 5px;
  white-space: pre-line;
}

.infoPanelBuff {
  color: rgb(10, 248, 10);
}

.infoPanelStats {
  padding-top: 5px;
  font-size: 15px;
}

.infoPanelPokemonLogo {
  height: 50px;
}

.noSelected{
  padding-top: 100px;
  padding-left: 18px;
}

.textAlignCenter {
  text-align: center;
}

.boardColumn {
  display: block;
}

.flex {
  display: flex;
}

.center {
  margin: auto;
}

.centerWith50{
  margin: auto;
  width: 50%;
}

.topBarDiv {
  width: 80%;
}

.topBarPlayerName {
  margin-top: 0px;
  padding-left: 30px;
  font-weight: bold;
}

.topBarRound {
  padding-left: 120px;
}

.topBarPadding {
  padding-left: 65px;
}

.topBarPieceDiv {
  padding-left: 65px;
}

.leftBar {
  width: 165px;
}

.marginTop5 {
  margin-top: 5px;
}

.marginTop15 {
  margin-top: 15px;
}

.boardDiv {
  background: url(./assets/images/pokeballOpacity.png) no-repeat;
  background-position: 8px 10px; 
  /*
  background: url(./assets/images/circle.png) no-repeat;
  */
}

.boardDivBattle {
  background: url(./assets/images/pokeball.png) no-repeat;
  background-position: 8px 10px; 
  /* 
  background: url(./assets/images/circle.png) no-repeat;
  */
}

.handDiv {
  background: url(./assets/images/handBg.png) no-repeat;
}

.handDivVisiting {
  background: url(./assets/images/visiting.png) no-repeat;
}

.cell {
  /*border: 1px solid lightblue;*/
  /*border: 1px solid rgb(33, 33, 33);*/
  border: 1px solid black;
  background-color:rgba(0, 0, 0, 0);
  border-radius: 8px;
  width: 85px; 
  height: 85px;
  position: relative;
  /*background: url(https://i.gyazo.com/f5c31403dc3840b9b276c3e8d3e178d3.png) no-repeat;*/
  /*background: url(./assets/images/grass2.gif) no-repeat;*/
  background-size: 85px 85px;
}

.cell .markedUnit {
  z-index: 30;
}

.markedUnit {
  border: 1px solid yellow;
  /*
  outline-style: groove;
  outline-color: gold;
  outline-width: thin;*/
  box-shadow: 0 0 7pt 3pt yellow;
}

:focus { outline: none; }

.text_shadow {
  color: white;
  text-shadow:
  -1px -1px 0 #000,
  1px -1px 0 #000,
  -1px 1px 0 #000,
  1px 1px 0 #000;  
}

.bold {
  font-weight: bold;
}

.hidden {
  display: none !important;
}

.oldNormalButton {
	border: white;
  border-style: solid;
	height: 45px;
  /*width: 50px;*/
  margin-right: 5px;	
  color: white;
  border-radius: 5px;
  text-shadow:
  -1px -1px 0 #000,
  1px -1px 0 #000,
  -1px 1px 0 #000,
  1px 1px 0 #000; 
  background-color: rgba(1, 1, 1, 0.7);
  font-weight: bold;
  /*font-size: 16pt;*/
}

.normalButton {
	-moz-box-shadow: 3px 4px 0px 0px #1564ad;
	-webkit-box-shadow: 3px 4px 0px 0px #1564ad;
	box-shadow: 3px 4px 0px 0px #1564ad;
	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #79bbff), color-stop(1, #378de5));
	background:-moz-linear-gradient(top, #79bbff 5%, #378de5 100%);
	background:-webkit-linear-gradient(top, #79bbff 5%, #378de5 100%);
	background:-o-linear-gradient(top, #79bbff 5%, #378de5 100%);
	background:-ms-linear-gradient(top, #79bbff 5%, #378de5 100%);
	background:linear-gradient(to bottom, #79bbff 5%, #378de5 100%);
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#79bbff', endColorstr='#378de5',GradientType=0);
	background-color:#79bbff;
	-moz-border-radius:5px;
	-webkit-border-radius:5px;
	border-radius:5px;
	border:1px solid #337bc4;
	display:inline-block;
	cursor:pointer;
	color:#ffffff;
	font-family:Arial;
  /*font-size:17px;
   padding:12px 44px;
  */
	font-weight:bold;
	text-decoration:none;
  text-shadow:0px 1px 0px #528ecc;
  height: 45px;
  text-shadow:
  -1px -1px 0 #000,
  1px -1px 0 #000,
  -1px 1px 0 #000,
  1px 1px 0 #000;
}

.normalButton:hover {
	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #378de5), color-stop(1, #79bbff));
	background:-moz-linear-gradient(top, #378de5 5%, #79bbff 100%);
	background:-webkit-linear-gradient(top, #378de5 5%, #79bbff 100%);
	background:-o-linear-gradient(top, #378de5 5%, #79bbff 100%);
	background:-ms-linear-gradient(top, #378de5 5%, #79bbff 100%);
	background:linear-gradient(to bottom, #378de5 5%, #79bbff 100%);
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#378de5', endColorstr='#79bbff',GradientType=0);
	background-color:#378de5;
}

.normalButton:active {
	position:relative;
	top:1px;
}

.goldImage {
  /*width: 30px;*/
  height: 30px; /*20*/
  width: 24px; /*16*/
  padding-left: 5px;
  /*
  padding-top: 1px;
  */
  padding-top: 1px;
}

.goldImageRefreshDiv {
  margin-top: -8px;
  margin-left: 7px;
}

.goldImageBuyExp {
  margin-left: 12px;
}

.goldImageSmall {
  height: 14px;
  width: 10px;
  padding-top: 4px;
  /*width: 18px;*/
  /*padding-top: 1px;*/
}

.goldImageSmallest {
  padding-left: 10px;
  height: 13px;
  width: 9px;
  padding-top: 4px;
  /*width: 18px;*/
  /*padding-top: 1px;*/
}

.goldImageShop {
  height: 15px;
  width: 11px;
  padding-top: 5px;
  margin-left: 12px;
  /*width: 18px;*/
  /*padding-top: 1px;*/
}

.goldImageScoreboard {
  height: 17px;
  width: 12px;
  padding-top: 7px;
  margin-left: 10px;
}

.goldImageTextSmall {
  padding-left: 3px;
  margin-top: 3px; 
}

.shopCostText {
  padding-left: 2px;
}

.biggerText{
  font-size: 22px;
}

.timerText{
  text-align: center;
  font-size: 70px;
}

.timerDiv{
  height: 80px;
}

.messageUpdate {
  margin-top: 10px;
  margin-left: 10px;
}

.messageUpdate-enter {
  opacity: 0.01;
}

.messageUpdate-enter.messageUpdate-enter-active {
  opacity: 1;
  transition: opacity 500ms ease-in;
}
/*
.messageUpdate::after {
  content: '';
  position: absolute;
  top: -50%;
  right: -50%;
  bottom: -50%;
  left: -50%;
  background: linear-gradient(to bottom, rgba(229, 172, 142, 0), rgba(255,255,255,0.5) 50%, rgba(229, 172, 142, 0));
  transform: rotateZ(60deg) translate(-5em, 7.5em);
}
*/

.boardBuffs{
  height: 225px;
  margin-left: -10px;
}
/* ... */

